--- a/BOF-Template/BOF-Template.vcxproj
+++ b/BOF-Template/BOF-Template.vcxproj
@@ -244,6 +244,7 @@
   <ItemGroup>
     <None Include="Makefile" />
     <None Include="packages.config" />
+    <None Include="utils\boflint.py" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
