--- a/BOF-Template/BOF-Template.vcxproj.filters
+++ b/BOF-Template/BOF-Template.vcxproj.filters
@@ -51,5 +51,6 @@
   <ItemGroup>
     <None Include="Makefile" />
     <None Include="packages.config" />
+    <None Include="utils\boflint.py" />
   </ItemGroup>
 </Project>
